--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-#spring.rabbitmq.template.default-receive-queue=weather-archive-queue
+rabbitmq.queue-name=q.sync-weather-queue
+rabbitmq.exchange-name=x.weather-archive-exchange
+rabbitmq.routing-key=sync-weather
