--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,8 @@
 
     <build>
         <plugins>
-            <plugin>
+            <!-- spring-boot-maven-plugin spoils jar structure by adding classes BOOT-INF and thus making not reachable -->
+        <!--    <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
@@ -68,7 +69,7 @@
                         </exclude>
                     </excludes>
                 </configuration>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
